[package]
name = "github-action-runner"
version = "1.0.57"
edition = "2021"
authors = ["s00d <Virus191288@gmail.com>"]
description = "command-line utility written in Rust for working with GitHub Actions"
repository = "https://github.com/s00d/github-action-runner"
license = "MIT"

[[bin]]
name = "gar"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
dialoguer = "0.11.0"
git2 = "0.18.1"
regex = "1.10.2"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0.108"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0.193", features = ["derive"] }
openssl = { version = "0.10", features = ["vendored"] }
libz-sys = { version = "1.1.0", default-features = false, features = ["libc"] }
clap = "4.4.11"
prettytable-rs = "0.10.0"
indicatif = "0.17.7"
zip = "0.6.6"
dirs = { version = "5.0.1", features = [] }
rodio = "0.17.3"
