[package]
name = "github-action-runner"
version = "1.0.63"
edition = "2021"
authors = ["s00d <Virus191288@gmail.com>"]
description = "command-line utility written in Rust for working with GitHub Actions"
repository = "https://github.com/s00d/github-action-runner"
license = "MIT"

[[bin]]
name = "gar"
path = "src/main.rs"

[features]
default = ["beep"]
beep = ["rodio"]

[dependencies]
colored = "2.1.0"
dialoguer = "0.11.0"
git2 = "0.19.0"
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["json"] }
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0.214", features = ["derive"] }
openssl = { version = "0.10.68", features = ["vendored"] }
libz-sys = { version = "1.1.20", default-features = false, features = ["libc"] }
clap = "4.5.20"
prettytable-rs = "0.10.0"
indicatif = "0.17.0"
zip = "2.2.0"
dirs = { version = "5.0.1", features = [] }
rodio = { version = "0.19.0", default-features = false, features = ["mp3"], optional = true }
strsim = "0.11.1"
